--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Coming Soon...</title>
 </head>
 <body>
-    <h1>Coming soon....</h1>
+    <h1>Coming <soon class=""></soon></h1>
 </body>
 </html>
